src/styles.css
body {
    padding: 0rem;
    margin: 0rem;
}

#buttons {
    margin: 1rem;
}

button,
input[type="submit"] {
    padding: 0.5rem;
    margin: 1.3rem 0.5rem 1.3rem 0rem;
    border-radius: 5px;
    border-color: gray;
}

input[type="submit"]{
    margin-bottom: 1rem;
}


/* for the forms */
form {
    border: solid lightgray 2px;
    border-radius: 10px;
    padding: 3rem;
    margin: 1rem;
    width: 50vw;
    position: absolute;
    top: 25%;
    left: 25%;
    background-color: white;
}

label,
input {
    margin: 0.8rem 0.8rem 0.8rem 0rem;
}

/* for priority section of form */
#priority {
    margin: 0.8rem 0rem 1rem 0rem;
}

/* for radio button options */
input[type="radio"] {
    margin: 0.8rem;
}



/* for displaying projects and items */
.projectDiv,
.itemDiv {
    padding: 0.5rem;
    border-radius: 10px;
}

.projectDiv {
    border: solid black 1px;
    margin: 0.8rem;
    font-weight: bold;
    width: 75vw;
}

.itemDiv {
    border: solid gray 1px;
    background-color: lightcyan;
    margin: 1rem;
    font-weight: normal;
}

